# neuro-fuzzy-library

./: CMakeLists.txt
source/auxiliary/: vector-operators.cpp
source/common/: data_modifier_incompleter_random.cpp
source/descriptors/: descriptor_arctan.cpp  descriptor_tanh.cpp
source/granules/: granule.cpp
source/heuristics/: simulated-annealing-gaussian.cpp
source/partitions/: fcm-T.h  fcom.cpp  rfcom.cpp
